Update and rename Chapter3.WELCOME TO LANGCHAIN.ipynb to Chapter3. WELCOME TO LANGCHAIN.ipynb

--- a/Langchain/Chapter3. WELCOME TO LANGCHAIN.ipynb
+++ b/Langchain/Chapter3. WELCOME TO LANGCHAIN.ipynb
@@ -11,7 +11,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "openai.organization = \"org-D1TSIvcGxVI2Hipb82LhDOH6\"\n",
+    "openai.organization = \"org-******\"\n",
     "openai.api_key = os.getenv('OPENAI_API_KEY')"
    ]
   },
